--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Breakfast Bowls</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div class="container">
+      <h1 class="title"></h1>
+      <p class="description"></p>
+      <div class="flavor-selector">
+        <!-- added dynamically -->
+      </div>
+      <div class="image-container">
+        <img src="/vite.svg" alt="Pumpkin Pie" class="bowl-image">
+      </div>
+      <div class="navigation">
+        <button class="prev">&lt;</button>
+        <button class="next">&gt;</button>
+      </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
