build: add type module for script

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <!-- added dynamically -->
       </div>
       <div class="image-container">
-        <img src="/vite.svg" alt="Pumpkin Pie" class="bowl-image">
+        <img src="/public/papaya.png" alt="Papaya Bowl" class="bowl-image">
       </div>
       <div class="navigation">
         <button class="prev">&lt;</button>
         <button class="next">&gt;</button>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
