feat: use cormorant font

--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Breakfast Bowls</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
-      <h1 class="title"></h1>
-      <p class="description"></p>
+      <h1 class="title cormorant-upright-bold"></h1>
+      <p class="description cormorant-upright-regular"></p>
       <div class="flavor-selector">
         <!-- added dynamically -->
       </div>
       <div class="image-container">
-        <img src="/public/papaya.png" alt="Papaya Bowl" class="bowl-image">
+        <img src="/papaya.png" alt="Papaya Bowl" class="bowl-image">
       </div>
       <div class="navigation">
         <button class="prev">&lt;</button>
