feat: use large images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="navigation">
           <button class="prev">&lt;</button>
           <div class="image-container">
-            <img src="/papaya.png" alt="Papaya Bowl" class="bowl-image">
+            <img class="bowl-image">
           </div>
           <button class="next">&gt;</button>
         </div>
