--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Breakfast Bowls</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -20,11 +20,11 @@
           <!-- added dynamically -->
         </div>
         <div class="navigation">
-          <button class="prev">&lt;</button>
+          <button class="prev cormorant-upright-light">&lt;</button>
           <div class="image-container">
             <img class="bowl-image">
           </div>
-          <button class="next">&gt;</button>
+          <button class="next cormorant-upright-light">&gt;</button>
         </div>
       </div>
     </div>
