fix: serve smaller images in webp
use smaller images of size 1000 x 1000px, use webp for smaller payload size leading to quicker image updates

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <div class="navigation">
           <button class="prev cormorant-upright-light">&lt;</button>
           <div class="image-container">
-            <img class="bowl-image">
+            <picture>
+              <source class="bowl-image-webp" type="image/webp">
+              <source class="bowl-image-png" type="image/png">
+              <img class="bowl-image">
+            </picture>
           </div>
           <button class="next cormorant-upright-light">&gt;</button>
         </div>
