add meta description for seo improvement

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+          content="This is a display of cocoa and egg based oatmeal breakfast
+                  bowls with various fruit toppings. It makes for a balanced
+                  protein, carbs, and nutrient rich meal to start the day with.
+                  Base oatmeal recipe is included.">
     <title>Breakfast Bowls</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
